# bazel-tryout

./: README.md  WORKSPACE  angular.json  nx.json  package.json  postinstall.tsconfig.json  tsconfig.json
apps/app-and-library/: BUILD.bazel  tsconfig.app.json  tsconfig.spec.json
apps/app-and-library-e2e/: BUILD.bazel  tsconfig.e2e.json
apps/app-and-library-e2e/src/: app.e2e-spec.ts
apps/app-and-library/src/: index.html
apps/app-and-library/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
apps/apps/using-lodash/: karma.conf.js
apps/ngrx-store/: BUILD.bazel  tsconfig.app.json  tsconfig.spec.json
apps/ngrx-store-e2e/: BUILD.bazel  tsconfig.e2e.json
apps/ngrx-store-e2e/src/: app.e2e-spec.ts
apps/ngrx-store/src/: index.html  require.config.js
apps/ngrx-store/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
apps/ngrx-store/src/app/+state/: actions.ts  interface.ts  reducer.ts  selectors.ts
apps/scss-component-styling/: BUILD.bazel  tsconfig.app.json
apps/scss-component-styling-e2e/: BUILD.bazel
apps/scss-component-styling-e2e/src/: app.e2e-spec.ts  app.po.ts
apps/scss-component-styling/src/: index.html
apps/scss-component-styling/src/app/: app.component.scss  app.component.spec.ts  app.component.ts
apps/single-app/: BUILD.bazel  tsconfig.app.json  tsconfig.spec.json
apps/single-app-e2e/: BUILD.bazel  tsconfig.e2e.json
apps/single-app-e2e/src/: app.e2e-spec.ts  app.po.ts
apps/single-app/src/: index.html  initialize_testbed.ts
apps/single-app/src/app/: app.component.spec.ts
apps/sub-package/: BUILD.bazel  tsconfig.app.json  tsconfig.spec.json
apps/sub-package-e2e/: BUILD.bazel  protractor.on-prepare.js  tsconfig.e2e.json
apps/sub-package-e2e/src/: app.e2e-spec.ts
apps/sub-package/src/: index.html
apps/sub-package/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
apps/sub-package/src/app/feature-a/: BUILD.bazel  feature-a.component.html  feature-a.component.spec.ts  feature-a.component.ts  feature-a.module.ts
apps/using-lodash/: BUILD.bazel  require.config.js  require.karma-config.js  tsconfig.app.json  tsconfig.spec.json
apps/using-lodash-e2e/: BUILD.bazel  tsconfig.e2e.json
apps/using-lodash-e2e/src/: app.e2e-spec.ts
apps/using-lodash/src/: index.html
apps/using-lodash/src/app/: app.component.spec.ts  app.component.ts
e2e/src/: app.e2e-spec.ts
libs/feature-b/: BUILD.bazel  tsconfig.spec.json
libs/feature-b/src/lib/: feature-b.component.spec.ts  feature-b.component.ts  feature-b.module.ts
src/: BUILD.bazel
src/app/: app.component.spec.ts  app.component.ts
