package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")
load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle", "history_server")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ng_module(
    name = "sub-package",
    srcs = glob(
        include = [
            "src/*.ts",
            "src/app/*.ts"
        ],
        exclude = [
            "**/*.spec.ts",
            "src/main.ts",
            "src/test.ts",
            "src/initialize_testbed.ts"
        ],
    ),
    assets = glob([
      "src/app/*.css",
      "src/app/*.html",
    ]),
    deps = [
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@npm//@types",
        "//apps/sub-package/src/app/feature-a"
    ],
)

rollup_bundle(
    name = "bundle",
    entry_point = "apps/sub-package/src/main.prod",
    deps = ["//apps/sub-package"],
)

# Needed because the prodserver only loads static files that appear under this
# package.
genrule(
    name = "zonejs",
    srcs = ["@npm//node_modules/zone.js:dist/zone.min.js"],
    outs = ["zone.min.js"],
    cmd = "cp $< $@",
)

history_server(
    name = "prodserver",
    data = [
        "src/index.html",
        ":bundle",
        ":zonejs",
    ],
)

ts_devserver(
    name = "devserver",
    port = 4200,
    additional_root_paths = [
        "npm/node_modules/zone.js/dist",
        "npm/node_modules/tslib",
        "bazel_tryout/apps/sub-package/src",
    ],
    entry_module = "bazel_tryout/apps/sub-package/src/main.dev",
    serving_path = "/bundle.min.js",
    static_files = [
        "@npm//node_modules/zone.js:dist/zone.min.js",
        "@npm//node_modules/tslib:tslib.js",
        "src/index.html",
        "src/favicon.ico",
    ],
    deps = [":sub-package"],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["src/app/*.spec.ts"]),
    deps = [
        ":sub-package",
        "@angular//packages/core",
        "@angular//packages/core/testing",
        "@npm//@types",
    ],
)

ts_library(
    name = "initialize_testbed",
    testonly = 1,
    srcs = [
        "src/initialize_testbed.ts",
    ],
    deps = [
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser-dynamic/testing",
        "@npm//@types",
    ],
)

ts_web_test_suite(
    name = "test",
    srcs = ["@npm//node_modules/tslib:tslib.js"],
    runtime_deps = [
        ":initialize_testbed",
    ],
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    deps = [
        ":test_lib",
        "@npm//karma-jasmine",
    ],
)
