package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test_suite")

ng_module(
    name = "feature-b",
    srcs = glob(
        include = [
            "src/index.ts",
            "src/lib/*.ts",
        ],
        exclude = ["src/lib/*.spec.ts"],
    ),
    assets = glob([
        "src/lib/*.css",
        "src/lib/*.html",
    ]),
    deps = [
        "@angular//packages/core",
        "@npm//@types",
    ],
)

ts_library(
    name = "test_lib",
    testonly = 1,
    srcs = glob(["src/lib/*.spec.ts"]),
    deps = [
        ":feature-b",
        "@angular//packages/core/testing",
        "@npm//@types",
    ],
)

ts_library(
    name = "initialize_testbed",
    testonly = 1,
    srcs = [
        "src/initialize_testbed.ts",
    ],
    deps = [
        "@angular//packages/core/testing",
        "@angular//packages/platform-browser-dynamic/testing",
        "@npm//@types",
    ],
)

ts_web_test_suite(
    name = "test",
    srcs = ["@npm//node_modules/tslib:tslib.js"],
    # do not sort
    bootstrap = [
        "@npm//node_modules/zone.js:dist/zone-testing-bundle.js",
        "@npm//node_modules/reflect-metadata:Reflect.js",
    ],
    browsers = [
        "@io_bazel_rules_webtesting//browsers:chromium-local",
    ],
    runtime_deps = [
        ":initialize_testbed",
    ],
    deps = [
        ":test_lib",
        "@npm//karma-jasmine",
    ],
)
